Headers, icons, about us

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -28,32 +28,32 @@
 			<div id="main">
 
 				<header class="major container 75%">
-					<h2>Reduce possibility of bribery</h2>
+					<h2>Reduces possibility of bribery</h2>
         </header>
 
         <header class="major container 75%">
-            <h2>Give all competitors equal chances</h2>
+            <h2>Gives all competitors equal chances</h2>
         </header>
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-lock"><img src="assets/css/images/overlay3.png" alt="" /></a>
+						<i class="image icon fas fa-lock"><img src="assets/css/images/overlay3.png" alt="" /></i>
 						<div class="content">
 							<h3>Security built-in</h3>
-							<p>Vitae natoque dictum etiam semper blockchain enim kurwa amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<p>Blockchain is the best tool to achieve data encryption and protection while maintaining their transparency and immutability.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-universal-access"><img src="assets/css/images/overlay3.png" alt="" /></a>
+						<i class="image icon fa fa-universal-access"><img src="assets/css/images/overlay3.png" alt="" /></i>
 						<div class="content">
 							<h3>UX first</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<p>Why should sophisticated technology be ugly and complicated? TendeChain provides a clear and easy to learn interface for everyone to understand.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-gavel"><img src="assets/css/images/overlay3.png" alt="" /></a>
+						<i class="image icon fa fa-handshake"><img src="assets/css/images/overlay3.png" alt="" /></i>
 						<div class="content">
-							<h3>Law friendly</h3>
+							<h3>SaaS model</h3>
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
 						</div>
 					</section>
@@ -62,111 +62,23 @@
 
 				<div class="box container">
 					<header>
-						<h2>A lot of generic stuff</h2>
+						<h2>About us</h2>
 					</header>
 					<section>
 						<header>
-							<h3>Paragraph</h3>
-							<p>This is the subtitle for this particular heading</p>
-						</header>
-						<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-						habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-						leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-						amet risus elit.</p>
-					</section>
-					<section>
-						<header>
-							<h3>Blockquote</h3>
-						</header>
-						<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-						tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
-					</section>
-					<section>
-						<header>
-							<h3>Divider</h3>
-						</header>
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
-						<hr />
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
-					</section>
-					<section>
-						<header>
-							<h3>Unordered List</h3>
-						</header>
-						<ul class="default">
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-						</ul>
-					</section>
-					<section>
-						<header>
-							<h3>Ordered List</h3>
-						</header>
-						<ol class="default">
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-						</ol>
-					</section>
-					<section>
-						<header>
-							<h3>Table</h3>
-						</header>
-						<div class="table-wrapper">
-							<table class="default">
-								<thead>
-									<tr>
-										<th>ID</th>
-										<th>Name</th>
-										<th>Description</th>
-										<th>Price</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>45815</td>
-										<td>Something</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>29.99</td>
-									</tr>
-									<tr>
-										<td>24524</td>
-										<td>Nothing</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>19.99</td>
-									</tr>
-									<tr>
-										<td>45815</td>
-										<td>Something</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>29.99</td>
-									</tr>
-									<tr>
-										<td>24524</td>
-										<td>Nothing</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>19.99</td>
-									</tr>
-								</tbody>
-								<tfoot>
-									<tr>
-										<td colspan="3"></td>
-										<td>100.00</td>
-									</tr>
-								</tfoot>
-							</table>
+							<h3>From hackathon to action</h3>
+            </header>
+          </section>
+          <section class="feature left">
+						<span class="image about-image"><img src="images/tc3.jpg" alt="" /></span>
+						<div class="content">
+              <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus. Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus.</p>
 						</div>
+          </section>
+          <section><p></p></section>
+					<section>
+            <blockquote><p>Congratulations to TenderChain, @AngelHack Code For A Cause Impact Award Krakow #hackathon winners who are creating digital trust, reducing corruption and increasing efficiency for procurement! #blockchain #ah2018</p>
+            <span class="quote-author">- Gisele I. Karekezi <a href="https://twitter.com/GiseleIKarekezi">@GiseleIKarekezi</a></span></blockquote>
 					</section>
         </div>
 
@@ -206,8 +118,8 @@
 					</form>
 
 					<ul class="icons">
-						<li><a href="https://twitter.com/tenderchain" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="http://facebook.com/tenderchain" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://twitter.com/tenderchain" class="icon fab fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="http://facebook.com/tenderchain" class="icon fab fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 
 					<ul class="copyright">
