Add email script and some text

--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
 						<i class="image icon fa fa-handshake"><img src="assets/css/images/overlay3.png" alt="" /></i>
 						<div class="content">
 							<h3>SaaS model</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<p>System as a Service model based on cloud architecture provides secure and stable environment. Also we know how important it is to always have a real person that can handle any technical problems so we will be always ready to solve them right away.</p>
 						</div>
 					</section>
 				</div>
-
-
 				<div class="box container">
 					<header>
 						<h2>About us</h2>
@@ -69,14 +67,8 @@
 							<h3>From hackathon to action</h3>
             </header>
           </section>
-          <section class="feature left">
-						<span class="image about-image"><img src="images/tc3.jpg" alt="" /></span>
-						<div class="content">
-              <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus. Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus.</p>
-						</div>
-          </section>
-          <section><p></p></section>
-					<section>
+          <section>
+						<p class="about-image"><img src="images/tc3.jpg" alt="" /></p>
             <blockquote><p>Congratulations to TenderChain, @AngelHack Code For A Cause Impact Award Krakow #hackathon winners who are creating digital trust, reducing corruption and increasing efficiency for procurement! #blockchain #ah2018</p>
             <span class="quote-author">- Gisele I. Karekezi <a href="https://twitter.com/GiseleIKarekezi">@GiseleIKarekezi</a></span></blockquote>
 					</section>
@@ -94,7 +86,7 @@
 
 					<p>We are now in seed state looking for people who wants to help us change the world.</p>
 
-					<form method="post" action="#">
+					<form method="post" action="email.php">
 						<div class="row">
 							<div class="6u 12u(mobilep)">
 								<input type="text" name="name" placeholder="Name" />
