--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<h2>Questions or comments?</h2>
 					</header>
 
-					<p>We are now in seed state looking for people who wants to help us change the world.</p>
+					<p>We are now ooking for people who wants to help us change the world.</p>
 
 					<form method="post" action="email.php">
 						<div class="row">
@@ -122,7 +122,7 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
