--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; TenderChain</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; TenderChain</li><li>Design: <a href="http://html5up.net">HTML5 UP</a> &amp; <a href="http://mgolebiowski.github.com">@mgolebiowski</a> </li>
 					</ul>
 
 				</div>
