--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<i class="image icon fa fa-handshake"><img src="assets/css/images/overlay3.png" alt="" /></i>
 						<div class="content">
 							<h3>SaaS model</h3>
-							<p>System as a Service model based on cloud architecture provides secure and stable environment. Also we know how important it is to always have a real person that can handle any technical problems so we will be always ready to solve them right away.</p>
+							<p>Software as a Service model based on cloud architecture provides secure and stable environment. Also we know how important it is to always have a real person that can handle any technical problems so we will be always ready to solve them right away.</p>
 						</div>
 					</section>
 				</div>
